tests/snapshots/snapshot__fixtures@m36__plots.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m36/plots.sas
---
==== LOG ====

1     libname d 'data';
NOTE: Libref D was successfully assigned as follows:
            Engine:        PARQUET
            Physical Name: data

2     title 'PROC REG: PLOTS= diagnostics request + traditional PLOT statement';

3     proc reg data=d.class plots=(diagnostics fit);
4       model weight = height;
5       plot residual.*predicted.;
6       plot weight*height;
7     run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: There were 19 observations used.
NOTE: REG PLOTS= request: 2 plot(s) deferred (compile with --features graphics).
NOTE: REG PLOT statement: 2 scatter(s) deferred (compile with --features graphics).
NOTE: PROCEDURE REG used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

8     title 'PROC REG: PLOTS=NONE suppresses the diagnostic image';

9     proc reg data=d.class plots=none;
10      model weight = height;
11    run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: There were 19 observations used.
NOTE: PROCEDURE REG used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

12    title;

==== LISTING ====
               PROC REG: PLOTS= diagnostics request + traditional PLOT statement

                                       The REG Procedure
                                         Model: MODEL1
                                   Dependent Variable: weight

               Number of Observations Read         19
               Number of Observations Used         19


                                      Analysis of Variance

          Source             DF    Sum of Squares    Mean Square    F Value    Pr > F

          Model               1        7193.24912     7193.24912      57.08    <.0001
          Error              17        2142.48772      126.02869
          Corrected Total    18        9335.73684


Root MSE             11.22625    R-Square     0.7705
Dependent Mean       100.02632    Adj R-Sq     0.7570
Coeff Var            11.22330


         Variable     DF    Parameter Estimate    Standard Error    t Value    Pr > |t|

         Intercept     1            -143.02692          32.27459      -4.43      0.0004
         height        1               3.89903           0.51609       7.55      <.0001

                      PROC REG: PLOTS=NONE suppresses the diagnostic image

                                       The REG Procedure
                                         Model: MODEL1
                                   Dependent Variable: weight

               Number of Observations Read         19
               Number of Observations Used         19


                                      Analysis of Variance

          Source             DF    Sum of Squares    Mean Square    F Value    Pr > F

          Model               1        7193.24912     7193.24912      57.08    <.0001
          Error              17        2142.48772      126.02869
          Corrected Total    18        9335.73684


Root MSE             11.22625    R-Square     0.7705
Dependent Mean       100.02632    Adj R-Sq     0.7570
Coeff Var            11.22330


         Variable     DF    Parameter Estimate    Standard Error    t Value    Pr > |t|

         Intercept     1            -143.02692          32.27459      -4.43      0.0004
         height        1               3.89903           0.51609       7.55      <.0001

==== EXIT 0 ====
