tests/snapshots/snapshot__fixtures@m36__ridge_pcomit.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m36/ridge_pcomit.sas
---
==== LOG ====

1     libname d 'data';
NOTE: Libref D was successfully assigned as follows:
            Engine:        PARQUET
            Physical Name: data

2     title 'PROC REG: ridge regression (RIDGE=) with OUTVIF';

3     proc reg data=d.class ridge=0 0.05 0.1 outvif outest=rest;
4       model weight = age height;
5     run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: There were 19 observations used.
NOTE: The ridge trace plot is not produced in this environment.
NOTE: The data set WORK.REST has 7 observations and 9 variables.
NOTE: PROCEDURE REG used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

6     proc print data=rest;
7     run;
NOTE: There were 7 observations read from the data set WORK.REST.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

8     title 'PROC REG: incomplete principal components (PCOMIT=)';

9     proc reg data=d.class pcomit=1 outest=pest;
10      model weight = age height;
11    run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: There were 19 observations used.
NOTE: The data set WORK.PEST has 2 observations and 9 variables.
NOTE: PROCEDURE REG used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

12    proc print data=pest;
13    run;
NOTE: There were 2 observations read from the data set WORK.PEST.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

14    title;

==== LISTING ====
                        PROC REG: ridge regression (RIDGE=) with OUTVIF

                                       The REG Procedure
                                         Model: MODEL1
                                   Dependent Variable: weight

               Number of Observations Read         19
               Number of Observations Used         19


                              Ridge Regression Parameter Estimates

                           Ridge     Intercept        age     height

                               0    -141.22376    1.27839    3.59703
                            0.05    -129.85288    2.25606    3.20578
                             0.1    -120.72737    2.84104    2.93443


                                      Ridge Regression VIF

                                  Ridge        age     height

                                      0    2.92762    2.92762
                                   0.05    1.91799    1.91799
                                    0.1    1.38015    1.38015

                        PROC REG: ridge regression (RIDGE=) with OUTVIF

Obs    _MODEL_    _TYPE_      _DEPVAR_    _RIDGE_          _RMSE_       Intercept             age          height    weight

  1    MODEL1     PARMS       weight            .    11.511135204    -141.2237635    1.2783925135    3.5970265113        -1
  2    MODEL1     RIDGE       weight            0    11.511135204    -141.2237635    1.2783925135    3.5970265113         .
  3    MODEL1     RIDGEVIF    weight            0               .               .     2.927620709     2.927620709         .
  4    MODEL1     RIDGE       weight         0.05    11.511135204    -129.8528814    2.2560556077     3.205777337         .
  5    MODEL1     RIDGEVIF    weight         0.05               .               .    1.9179914995    1.9179914995         .
  6    MODEL1     RIDGE       weight          0.1    11.511135204    -120.7273709    2.8410435409    2.9344275845         .
  7    MODEL1     RIDGEVIF    weight          0.1               .               .    1.3801510407    1.3801510407         .

                      PROC REG: incomplete principal components (PCOMIT=)

                                       The REG Procedure
                                         Model: MODEL1
                                   Dependent Variable: weight

               Number of Observations Read         19
               Number of Observations Used         19


                      Incomplete Principal Components Parameter Estimates

                           PCOMIT     Intercept        age     height

                                1    -114.45860    6.81678    1.98461

                      PROC REG: incomplete principal components (PCOMIT=)

Obs    _MODEL_    _TYPE_    _DEPVAR_    _PCOMIT_          _RMSE_       Intercept             age          height    weight

  1    MODEL1     PARMS     weight             .    11.511135204    -141.2237635    1.2783925135    3.5970265113        -1
  2    MODEL1     IPC       weight             1    11.511135204     -114.458599    6.8167837034    1.9846057959         .

==== EXIT 0 ====
