tests/snapshots/snapshot__fixtures@m36__test_restrict.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m36/test_restrict.sas
---
==== LOG ====

1     libname d 'data';
NOTE: Libref D was successfully assigned as follows:
            Engine:        PARQUET
            Physical Name: data

2     title 'PROC REG: TEST statement (linear hypotheses)';

3     proc reg data=d.class;
4       model weight = age height;
5       test age = 0;
6       equal: test age = height;
7     run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: There were 19 observations used.
NOTE: PROCEDURE REG used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

8     title 'PROC REG: RESTRICT statement (constrained LS)';

9     proc reg data=d.class;
10      model weight = age height;
11      restrict age = height;
12    run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: There were 19 observations used.
NOTE: PROCEDURE REG used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

13    title;

==== LISTING ====
                          PROC REG: TEST statement (linear hypotheses)

                                       The REG Procedure
                                         Model: MODEL1
                                   Dependent Variable: weight

               Number of Observations Read         19
               Number of Observations Used         19


                                      Analysis of Variance

          Source             DF    Sum of Squares    Mean Square    F Value    Pr > F

          Model               2        7215.63710     3607.81855      27.23    <.0001
          Error              16        2120.09974      132.50623
          Corrected Total    18        9335.73684


Root MSE             11.51114    R-Square     0.7729
Dependent Mean       100.02632    Adj R-Sq     0.7445
Coeff Var            11.50811


         Variable     DF    Parameter Estimate    Standard Error    t Value    Pr > |t|

         Intercept     1            -141.22376          33.38309      -4.23      0.0006
         age           1               1.27839           3.11010       0.41      0.6865
         height        1               3.59703           0.90546       3.97      0.0011


                          Test 1 Results for Dependent Variable weight

                     Source         DF    Mean Square    F Value    Pr > F

                     Numerator       1       22.38798       0.17    0.6865
                     Denominator    16      132.50623


                        Test equal Results for Dependent Variable weight

                     Source         DF    Mean Square    F Value    Pr > F

                     Numerator       1       47.29303       0.36    0.5586
                     Denominator    16      132.50623

                         PROC REG: RESTRICT statement (constrained LS)

                                       The REG Procedure
                                         Model: MODEL1
                                   Dependent Variable: weight

               Number of Observations Read         19
               Number of Observations Used         19


                                      Analysis of Variance

          Source             DF    Sum of Squares    Mean Square    F Value    Pr > F

          Model               1        7168.34408     7168.34408      56.23    <.0001
          Error              17        2167.39276      127.49369
          Corrected Total    18        9335.73684


Root MSE             11.29131    R-Square     0.7678
Dependent Mean       100.02632    Adj R-Sq     0.7542
Coeff Var            11.28834


Variable     DF    Parameter Estimate    Standard Error    t Value    Pr > |t|    Label

Intercept     1            -135.94031          31.57562      -4.31      0.0005
age           1               3.11908           0.41597       7.50      <.0001
height        1               3.11908           0.41597       7.50      <.0001
RESTRICT     -1             -20.39693          33.48966      -0.61      0.5505    AGE - HEIGHT = 0

==== EXIT 0 ====
